[gd_scene load_steps=66 format=2]

[ext_resource path="res://scrips_scenes/characters/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/RightStrike1.png" type="Texture" id=2]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/Left1.png" type="Texture" id=3]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/Down1.png" type="Texture" id=4]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/LeftStrike1.png" type="Texture" id=5]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/Down2.png" type="Texture" id=6]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/Left3.png" type="Texture" id=7]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/DownStrike2.png" type="Texture" id=8]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/DownStrike3.png" type="Texture" id=9]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/UpStrike1.png" type="Texture" id=10]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/RightStrike2.png" type="Texture" id=11]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/RightStrike3.png" type="Texture" id=12]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/UpStrike3.png" type="Texture" id=13]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/DownStrike1.png" type="Texture" id=14]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/Left2.png" type="Texture" id=15]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/Down3.png" type="Texture" id=16]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/Up1.png" type="Texture" id=17]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/Up2.png" type="Texture" id=18]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/Up3.png" type="Texture" id=19]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/UpStrike2.png" type="Texture" id=20]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/LeftStrike2.png" type="Texture" id=21]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/Right3.png" type="Texture" id=22]
[ext_resource path="res://scrips_scenes/utils/hit_system/Hitbox.tscn" type="PackedScene" id=23]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/LeftStrike3.png" type="Texture" id=24]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/Right2.png" type="Texture" id=25]
[ext_resource path="res://assets/Textures/Player/Jeremy/Green/Right1.png" type="Texture" id=26]
[ext_resource path="res://scrips_scenes/utils/hit_system/Hurtbox.tscn" type="PackedScene" id=27]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 15 ), ExtResource( 7 ) ],
"loop": true,
"name": "left",
"speed": 8.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 25 ), ExtResource( 22 ) ],
"loop": true,
"name": "right",
"speed": 8.0
}, {
"frames": [ ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ) ],
"loop": true,
"name": "up",
"speed": 8.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 5 ), ExtResource( 21 ), ExtResource( 24 ), ExtResource( 2 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 20 ), ExtResource( 13 ) ],
"loop": true,
"name": "strike",
"speed": 8.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 16 ) ],
"loop": true,
"name": "down",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 5.63091
height = 0.0

[sub_resource type="Animation" id=3]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "strike" ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_attack_state"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=4]
resource_name = "attack_left"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "strike" ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_attack_state"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 8 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -35.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 20.6 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=5]
resource_name = "attack_right"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "strike" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_attack_state"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 69.1 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 124.7 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=6]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "strike" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_attack_state"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HitboxPivot:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 207.9 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 64.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HitboxPivot/SwordHitbox/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=7]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "down" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=8]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "left" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=9]
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "right" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=10]
length = 0.1
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "up" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1 ]
}

[sub_resource type="Animation" id=11]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "down" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InteractionZone:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -180.0 ]
}

[sub_resource type="Animation" id=12]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "left" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InteractionZone:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -90.0 ]
}

[sub_resource type="Animation" id=13]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "right" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InteractionZone:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}

[sub_resource type="Animation" id=14]
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "up" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("InteractionZone:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="AnimationNodeAnimation" id=15]
animation = "attack_down"

[sub_resource type="AnimationNodeAnimation" id=16]
animation = "attack_up"

[sub_resource type="AnimationNodeAnimation" id=17]
animation = "attack_right"

[sub_resource type="AnimationNodeAnimation" id=18]
animation = "attack_left"

[sub_resource type="AnimationNodeBlendSpace2D" id=19]
blend_point_0/node = SubResource( 15 )
blend_point_0/pos = Vector2( 0, 1 )
blend_point_1/node = SubResource( 16 )
blend_point_1/pos = Vector2( 0, -1 )
blend_point_2/node = SubResource( 17 )
blend_point_2/pos = Vector2( -1.1, 0 )
blend_point_3/node = SubResource( 18 )
blend_point_3/pos = Vector2( 1.1, 0 )
min_space = Vector2( -1.1, -1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "idle_left"

[sub_resource type="AnimationNodeAnimation" id=21]
animation = "idle_down"

[sub_resource type="AnimationNodeAnimation" id=22]
animation = "idle_right"

[sub_resource type="AnimationNodeAnimation" id=23]
animation = "idle_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=24]
blend_point_0/node = SubResource( 20 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 21 )
blend_point_1/pos = Vector2( 0, 1.1 )
blend_point_2/node = SubResource( 22 )
blend_point_2/pos = Vector2( 1.1, 0 )
blend_point_3/node = SubResource( 23 )
blend_point_3/pos = Vector2( 0, -1 )
min_space = Vector2( -1.1, -1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id=25]
animation = "walking_left"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "walking_down"

[sub_resource type="AnimationNodeAnimation" id=27]
animation = "walking_right"

[sub_resource type="AnimationNodeAnimation" id=28]
animation = "walking_up"

[sub_resource type="AnimationNodeBlendSpace2D" id=29]
blend_point_0/node = SubResource( 25 )
blend_point_0/pos = Vector2( -1.1, 0 )
blend_point_1/node = SubResource( 26 )
blend_point_1/pos = Vector2( 0, 1 )
blend_point_2/node = SubResource( 27 )
blend_point_2/pos = Vector2( 1.1, 0 )
blend_point_3/node = SubResource( 28 )
blend_point_3/pos = Vector2( 0, -1 )
min_space = Vector2( -1.1, -1 )
max_space = Vector2( 1.1, 1 )
blend_mode = 1

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=31]

[sub_resource type="AnimationNodeStateMachineTransition" id=32]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachine" id=34]
states/Attacking/node = SubResource( 19 )
states/Attacking/position = Vector2( 308, 229 )
states/Idle/node = SubResource( 24 )
states/Idle/position = Vector2( 308, 111 )
states/Walking/node = SubResource( 29 )
states/Walking/position = Vector2( 523, 111 )
transitions = [ "Idle", "Walking", SubResource( 30 ), "Walking", "Idle", SubResource( 31 ), "Idle", "Attacking", SubResource( 32 ), "Attacking", "Idle", SubResource( 33 ) ]
start_node = "Idle"
graph_offset = Vector2( -16, 71 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=35]

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 6.388, 11.519 )

[sub_resource type="RectangleShape2D" id=37]
extents = Vector2( 9, 5 )

[sub_resource type="CapsuleShape2D" id=38]
radius = 10.6124
height = 9.561

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0.105114, 0 )
frames = SubResource( 1 )
animation = "up"
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0523834, 9.24985 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack_down = SubResource( 3 )
anims/attack_left = SubResource( 4 )
anims/attack_right = SubResource( 5 )
anims/attack_up = SubResource( 6 )
anims/idle_down = SubResource( 7 )
anims/idle_left = SubResource( 8 )
anims/idle_right = SubResource( 9 )
anims/idle_up = SubResource( 10 )
anims/walking_down = SubResource( 11 )
anims/walking_left = SubResource( 12 )
anims/walking_right = SubResource( 13 )
anims/walking_up = SubResource( 14 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 34 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 35 )
parameters/Attacking/blend_position = Vector2( -0.00465119, -0.0172414 )
parameters/Idle/blend_position = Vector2( -0.0294574, 0.0258621 )
parameters/Walking/blend_position = Vector2( -0.245581, 0.62931 )

[node name="HitboxPivot" type="Position2D" parent="."]
__meta__ = {
"_gizmo_extents_": 8.0
}

[node name="SwordHitbox" parent="HitboxPivot" instance=ExtResource( 23 )]
position = Vector2( 4, 12 )
gravity_vec = Vector2( 0, 0 )
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" parent="HitboxPivot/SwordHitbox" index="0"]
rotation = 1.5708
shape = SubResource( 36 )
disabled = true

[node name="InteractionZone" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 16

[node name="InteractionRect" type="CollisionShape2D" parent="InteractionZone"]
position = Vector2( -0.25, -14.5 )
shape = SubResource( 37 )

[node name="Hurtbox" parent="." instance=ExtResource( 27 )]
collision_mask = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0.27837, 0.397301 )
shape = SubResource( 38 )

[connection signal="body_entered" from="InteractionZone" to="." method="_on_InteractionZone_body_entered"]
[connection signal="body_exited" from="InteractionZone" to="." method="_on_InteractionZone_body_exited"]

[editable path="HitboxPivot/SwordHitbox"]
[editable path="Hurtbox"]
